--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Ajith</title>
+            <link rel="stylesheet" href="./assets/styles/material.min.css">
+            <script src="./assets/scripts/material.min.js"></script>
+            <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </head>
 <body>
 
-<h1>AJITH</h1>
+<h1>Ajith Kumar</h1>
 <p>Coming soon...</p>
 
 </body>
