--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Ajith</title>
-            <link rel="stylesheet" href="./assets/styles/material.min.css">
-            <script src="./assets/scripts/material.min.js"></script>
-            <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+          <link rel="stylesheet" href="./material.min.css">
+        <script src="./material.min.js"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 <body>
 
