--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <h1>Ajith Kumar</h1>
 <p>Coming soon...</p>
+    <div>
+        <a href="#" class="mui-btn mui-btn--raised">More</a>   
+      </div>
 
 </body>
 </html>
