--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:500,700,800,400|Open+Sans:300italic,400italic,600italic,700italic,400,300,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
   </head>
   <body>
     <header>
@@ -17,46 +17,24 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">Portfolio</a></li>
+          <li><a href="index.html">Portfolio</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="selected">Contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="wrapper">
-      <section>
-        <ul id="gallery">
-          <li>
-            <a href="img/numbers-01.jpg">
-              <img src="img/numbers-01.jpg" alt="">
-              <p>Experimentation with color and texture.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-02.jpg">
-              <img src="img/numbers-02.jpg" alt="">
-              <p>Playing with blending modes with Photos.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-06.jpg">
-              <img src="img/numbers-06.jpg" alt="">
-              <p>Trying to create an 80's style of glows.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-09.jpg">
-              <img src="img/numbers-09.jpg" alt="">
-              <p>Drips created using Photoshop brushes.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-12.jpg">
-              <img src="img/numbers-12.jpg" alt="">
-              <p>Creating shapes using repitition.</p>
-            </a>
-          </li>
-               
+      <section id="primary">
+        <h3> General Information</h3>
+        <p>If I can be helpful to you or if you have any questions, please don't hesitate to contact me!</p>
+        <p>Please only use phone contact for urgent inquiries. Otherwise, email and Twitter are the best way to reach me. </p>
+      </section>
+      <section id="secondary">
+        <h3>Contact Details</h3>
+        <ul class="contact-info">
+          <li class="phone"><a href="tel:121212">121212</a></li>
+          <li class="mail"><a href="mailto:rsajithkumar90@live.com">rsajithkumar90@live.com</a></li>
+          <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=rsak90">@rsak90</a></li>
         </ul>
       </section>
       <footer>
@@ -70,6 +48,4 @@
     </div>
   </body>
 </html>
-
-
 
